--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <img src="4.jpg" alt="" class="about-pic">
 
         <div class="about-text">
-          <h2>Hi! I'm Front-end Developer</h2>
+          <h2>Hi! I'm a Software engineer</h2>
           <h3>
             <span>Front-end</span>
 
@@ -91,11 +91,11 @@
                 <div class="collapsible-body-block">
                   <div>
                     <span>I can do:</span>
-                    <span class="text">WebSite, animation, unusual buttons, paralax, 3D, neon, card, smoke, video
+                    <span class="text">WebSites, animation, unusual buttons, paralax, 3D, neon, cards, smoke, video
                       animation,
-                      text animation, unusual social icons, e-comerce card, mouse animation, scroll effect, svg
+                      text animation, unusual social icons, e-comerce cards, mouse animation, scroll effects, SVG
                       animation,
-                      menuBar etc.</span>
+                      menu bar etc.</span>
                   </div>
                   <div onclick="reload()">
                     <i class="fa fa-undo" aria-hidden="true"></i>
@@ -119,7 +119,7 @@
 
               <div class="collapsible-body collapsible-body-js">
                 <div class="collapsible-body-cursor">
-                  <p>I have made more than 10 sites</p>
+                  <p>I’ve created more than ten websites</p>
                   <audio id="audio" src="sound.wav" autostart="false"></audio>
                 </div>
               </div>
@@ -137,57 +137,57 @@
                   <span class="arrow-4-right"></span>
                 </div>
               </div>
-              <div class="collapsible-body"><span>I made an adaptive web application of a full-fledged Internet the
-                  store (React, Node.js, PostgreSQL):</span>
+              <div class="collapsible-body"><span>Сделал адаптивное web приложение полноценного интернет
+                  магазина (React, Node.js, PostgreSQL)</span>
                 <ul class="ul-li">
-                  <li><span>to perform this task, I studied:</span></li>
+                  <li><span>для выполнения этой задачи изучил:</span></li>
                   <ul>
                     <li>Node.js</li>
                     <li>Express</li>
                     <li>PostgreSQL</li>
                     <li>React Bootstrap</li>
-                    <li>running the application on the server</li>
+                    <li>запуск приложения на серверe</li>
                   </ul>
-                  <li><span>to manage the frontend state of the application, I used:</span></li>
+                  <li><span>для управления фронтенд-состоянием приложения использовал:</span></li>
                   <ul>
                     <li>MobX</li>
                   </ul>
-                  <li><span>to authorize the user, I used:</span></li>
+                  <li><span>для авторизации пользователя использовал:</span></li>
                   <ul>
                     <li>JSON Web Token</li>
                   </ul>
-                  <li><span>the npm package was used to validate the authorization and user registration fields:</span>
+                  <li><span>для добовления товара в список сравнения использовал:</span></li>
+                  <ul>
+                    <li>Cookie</li>
+                  </ul>
+                  <li><span>для валидации полей авторизации и регистрации пользователя использовал:</span>
                   </li>
                   <ul>
                     <li>Express-validator</li>
                   </ul>
-                  <li><span>to add the product to the comparison list, I used:</span></li>
-                  <ul>
-                    <li>Cookie</li>
-                  </ul>
-                  <li><span>I used the npm package to compress static files:</span></li>
+                  <li><span>для сжатия статических файлов использовал:</span></li>
                   <ul>
                     <li>Сompression</li>
                   </ul>
-                  <li><span>I used the npm package to send the email:</span></li>
+                  <li><span>для отправки email использовал:</span></li>
                   <ul>
                     <li>Nodemailer</li>
                   </ul>
                 </ul>
                 <div class="collapsible-body-link">
-                  Here is the link to the web application: &nbsp;&nbsp;<a
+                  Вот ссылка на web приложение: &nbsp;&nbsp;<a
                     href="https://euro-app.site">https://euro-app.site</a><br />
-                  Here is the link to GitHub: &nbsp;&nbsp;<a
+                  Вот ссылка на GitHub: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
                   <i>Administrator login: q@tut.by<br />
                     Administrator password: 11111</i><br />
-                  Completion period: 3 months
+                  Срок выполнения: 3 месяца
                 </div>
 
-                <span>I made a web application a simple social network:</span>
+                <span>Сделал адаптивное web приложение простую социальную сеть:</span>
                 <ul class="ul-li">
                   <li>
-                    <span>to manage the frontend state of the application, I used:</span>
+                    <span>для управления фронтенд-состоянием приложения использовал:</span>
                     <ul>
                       <li>Redux</li>
                     </ul>
@@ -195,9 +195,9 @@
                 </ul>
 
                 <div>
-                  Here is the link to GitHub: &nbsp;&nbsp;<a
+                  Вот ссылка на GitHub: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/React_social.git">https://github.com/Victor-Irzunov/React_social.git</a><br />
-                  Delivery time: 2 weeks
+                  Срок выполнения: 2 недели
                 </div>
 
             </li>
@@ -215,9 +215,9 @@
                 </div>
               </div>
               <div class="collapsible-body">
-                <span>I made a web application on Node.js:</span>
+                <span>Cделал web приложение на Node.js:</span>
                 <ul class="ul-li">
-                  <li><span>to perform this task, I studied:</span></li>
+                  <li><span>ля выполнения этой задачи изучил:</span></li>
                   <ul>
                     <li>
                       Handlebars
@@ -226,37 +226,37 @@
                       MongoDB
                     </li>
                   </ul>
-                  <li><span>to authorize the user, I used the npm package:</span></li>
+                  <li><span>для авторизации пользователя использовал:</span></li>
                   <ul>
                     <li>Express-session</li>
                   </ul>
-                  <li><span>to avoid certain attacks and protect the application a little (by adding headers), I used
-                      the npm package:</span></li>
+                  <li><span>для избежания определённых атак и немного защитить приложение (путём добавления заголовков)
+                      использовал:</span></li>
                   <ul>
                     <li>Helmet</li>
                   </ul>
-                  <li><span>the npm package was used to validate the authorization and user registration fields:</span>
+                  <li><span>для валидации полей авторизации и регистрации пользователя использова:</span>
                   </li>
                   <ul>
                     <li>Express-validator</li>
                   </ul>
-                  <li><span>I used the npm package to compress static files:</span></li>
+                  <li><span>для сжатия статических файлов использовал:</span></li>
                   <ul>
                     <li>Сompression</li>
                   </ul>
-                  <li><span>I used the npm package to send the email:</span></li>
+                  <li><span>для отправки email использова:</span></li>
                   <ul>
                     <li>Nodemailer</li>
                   </ul>
                 </ul>
                 <div>
-                  Here is the link to the web application: &nbsp;&nbsp;<a
+                  Вот ссылка на web приложени: &nbsp;&nbsp;<a
                     href="https://quiet-gorge-08860.herokuapp.com">https://quiet-gorge-08860.herokuapp.com</a><br />
-                  Here is the link to GitHub: &nbsp;&nbsp;<a
+                  Вот ссылка на GitHub: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/e-commerce-application.git">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
                   <i>Administrator login: a@tut.by<br />
                     Administrator password: 111</i><br />
-                  Delivery time: 1 month
+                    Срок выполнения: 1 месяц
                 </div>
               </div>
             </li>
@@ -272,25 +272,22 @@
                   <span class="arrow-4-right"></span>
                 </div>
               </div>
-              <div class="collapsible-body"><span> <span>I created a simple, but full-fledged client-server web
-                    application
-                    (todo application), to perform this task, I studied:</span>
+              <div class="collapsible-body"><span> <span>Создал простое, но полноценное клиент-серверное web приложение
+                (todo application), для выполнения этой задачи изучил:</span>
                   <ul class="ul__mysql">
                     <li>
                       MySQL
                     </li>
                   </ul>
                   <div>
-                    Here is the link to the web application: &nbsp;&nbsp;<a
+                    Вот ссылка на web приложение: &nbsp;&nbsp;<a
                       href="https://mighty-falls-71399.herokuapp.com/">https://mighty-falls-71399.herokuapp.com/</a><br />
-                    Here is the link to GitHub: &nbsp;&nbsp;<a
+                      Вот ссылка на GitHub: &nbsp;&nbsp;<a
                       href="https://github.com/Victor-Irzunov/REST-API.git">https://github.com/Victor-Irzunov/REST-API.git</a><br />
-                    Deadline: 1 week
+                      Срок выполнения: 1 неделя
                   </div>
-
                 </span></div>
             </li>
-
 
             <li>
               <div class="collapsible-header" onclick="toggleOpen(6)">
@@ -305,9 +302,9 @@
               </div>
               <div class="collapsible-body"><span>
                   <div>
-                    Here is the link to GitHub: &nbsp;&nbsp;<a
+                    Вот ссылка на GitHub: &nbsp;&nbsp;<a
                       href="https://github.com/Victor-Irzunov/GraphQL.git">https://github.com/Victor-Irzunov/GraphQL.git</a><br />
-                    Delivery time: 3 days
+                      Срок выполнения: 3 дня
                   </div>
                 </span></div>
             </li>
@@ -421,37 +418,37 @@
         <div class="block">
           <h4>2020</h4>
           <h3>HTML CSS</h3>
-          <p>Training at the IT-Academy</p>
+          <p>Обучение в IT-Academy</p>
         </div>
 
         <div class="block">
           <h4>2020</h4>
           <h3>JavaScript</h3>
-          <p>Training at the IT-Academy</p>
+          <p>Обучение в IT-Academy</p>
         </div>
 
         <div class="block">
           <h4>2020 - 2021</h4>
           <h3>React</h3>
-          <p>self-study</p>
+          <p>самообучение</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
           <h3>Node.js</h3>
-          <p>Training in the Additional Liability Company "Center for Learning Technologies"</p>
+          <p>обучение в ОДО «Центр Обучающих Технологий»</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
           <h3>NoSQL</h3>
-          <p>self-study</p>
+          <p>самообучение</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
           <h3>SQL</h3>
-          <p>self-study</p>
+          <p>самообучение</p>
         </div>
       </div>
     </div>
@@ -460,7 +457,7 @@
   <!-- Works -->
   <section id="works" class="dark">
     <div class="inner-width">
-      <h1 class="section-title">Works</h1>
+      <h1 class="section-title">My Portfolio</h1>
       <div class="works">
         <a href="scrin1.jpeg" class="work">
           <img src="scrin1.jpeg" alt="">
@@ -587,8 +584,6 @@
 
   <!-- Go Top BTN -->
   <button class="go__top fas fa-arrow-up"></button>
-
-
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
