--- a/index.html
+++ b/index.html
@@ -531,6 +531,30 @@
             <div class="cat">HTML, CSS, JS</div>
           </div>
         </a>
+
+        <a href="scrin10.jpeg" class="work">
+          <img src="scrin10.jpeg" alt="">
+          <div class="info">
+            <h3>E-comerce</h3>
+            <div class="cat">HTML, CSS, JS</div>
+          </div>
+        </a>
+
+        <a href="scrin11.jpeg" class="work">
+          <img src="scrin11.jpeg" alt="">
+          <div class="info">
+            <h3>Todo application</h3>
+            <div class="cat">Node.js, GraphQL, Handlebars, MySQL</div>
+          </div>
+        </a>
+
+        <a href="scrin12.jpeg" class="work">
+          <img src="scrin12.jpeg" alt="">
+          <div class="info">
+            <h3>Dashboard</h3>
+            <div class="cat">HTML, CSS, JS</div>
+          </div>
+        </a>
       </div>
     </div>
   </section>
