--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <!-- Home -->
   <section id="about">
     <div class="inner-width">
-      <h1 class="section-title">About</h1>
+      <h1 class="section-title">About Me</h1>
       <div class="about-content">
         <img src="4.jpg" alt="" class="about-pic">
 
@@ -119,7 +119,8 @@
 
               <div class="collapsible-body collapsible-body-js">
                 <div class="collapsible-body-cursor">
-                  <p>I’ve created more than ten websites</p>
+                  <p>I’ve created more than ten websites
+                  </p>
                   <audio id="audio" src="sound.wav" autostart="false"></audio>
                 </div>
               </div>
