--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         </div>
         <div class="service">
           <i class="icon fa fa-server" aria-hidden="true"></i>
-          <h4>Running the application on the server</h4>
+          <h4>запуск приложения на серверe</h4>
           <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> -->
         </div>
       </div>
