--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="collapsible-body-block">
                   <div>
                     <span>I can do:</span>
-                    <span class="text">WebSites, animation, unusual buttons, paralax, 3D, neon, cards, smoke, video
+                    <span class="text">webSites, animation, unusual buttons, paralax, 3D, neon, cards, smoke, video
                       animation,
                       text animation, unusual social icons, e-comerce cards, mouse animation, scroll effects, SVG
                       animation,
@@ -141,7 +141,7 @@
               <div class="collapsible-body"><span>Сделал адаптивное web приложение полноценного интернет
                   магазина (React, Node.js, PostgreSQL)</span>
                 <ul class="ul-li">
-                  <li><span>для выполнения этой задачи изучил:</span></li>
+                  <li><span>Для выполнения этой задачи изучил:</span></li>
                   <ul>
                     <li>Node.js</li>
                     <li>Express</li>
@@ -149,32 +149,62 @@
                     <li>React Bootstrap</li>
                     <li>запуск приложения на серверe</li>
                   </ul>
-                  <li><span>для управления фронтенд-состоянием приложения использовал:</span></li>
+                  <br />
+                  <li><span>Использовал следующие технологии:</span></li>
                   <ul>
-                    <li>MobX</li>
+                    <li>для управления фронтенд-состоянием приложения</li>
+                    <ul>
+                      <li>
+                        MobX
+                      </li>
+                    </ul>
                   </ul>
-                  <li><span>для авторизации пользователя использовал:</span></li>
                   <ul>
-                    <li>JSON Web Token</li>
+                    <li>для авторизации пользователя</li>
+                    <ul>
+                      <li>
+                        JSON Web Token
+                      </li>
+                    </ul>
                   </ul>
-                  <li><span>для добовления товара в список сравнения использовал:</span></li>
                   <ul>
-                    <li>Cookie</li>
+                    <li>для добовления товара в список сравнения</li>
+                    <ul>
+                      <li>
+                        Cookie
+                      </li>
+                    </ul>
                   </ul>
-                  <li><span>для валидации полей авторизации и регистрации пользователя использовал:</span>
+                  <!-- <br /> -->
+                  <!-- <li><span>The following NPM packages were used:</span> -->
                   </li>
                   <ul>
-                    <li>Express-validator</li>
+                    <li>для валидации полей авторизации и регистрации пользователя</li>
+                    <ul>
+                      <li>
+                        Express-validator
+                      </li>
+                    </ul>
                   </ul>
-                  <li><span>для сжатия статических файлов использовал:</span></li>
                   <ul>
-                    <li>Сompression</li>
+                    <li>для сжатия статических файлов</li>
+                    <ul>
+                      <li>
+                        Сompression
+                      </li>
+                    </ul>
                   </ul>
-                  <li><span>для отправки email использовал:</span></li>
+                  <!-- <li><span> использовал:</span></li> -->
                   <ul>
-                    <li>Nodemailer</li>
+                    <li>для отправки email</li>
+                    <ul>
+                      <li>
+                        Nodemailer
+                      </li>
+                    </ul>
                   </ul>
                 </ul>
+                <br />
                 <div class="collapsible-body-link">
                   Вот ссылка на web приложение: &nbsp;&nbsp;<a
                     href="https://euro-app.site">https://euro-app.site</a><br />
@@ -194,7 +224,7 @@
                     </ul>
                   </li>
                 </ul>
-
+                <br />
                 <div>
                   Вот ссылка на GitHub: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/React_social.git">https://github.com/Victor-Irzunov/React_social.git</a><br />
@@ -216,9 +246,9 @@
                 </div>
               </div>
               <div class="collapsible-body">
-                <span>Cделал web приложение на Node.js:</span>
+                <span>Cделал web приложение на Node.js</span>
                 <ul class="ul-li">
-                  <li><span>ля выполнения этой задачи изучил:</span></li>
+                  <li><span>для выполнения этой задачи изучил:</span></li>
                   <ul>
                     <li>
                       Handlebars
@@ -227,31 +257,53 @@
                       MongoDB
                     </li>
                   </ul>
-                  <li><span>для авторизации пользователя использовал:</span></li>
+                  <br>
+
+                  <li><span>The following NPM packages were used:</span></li>
                   <ul>
-                    <li>Express-session</li>
+                    <li>для авторизации пользователя</li>
+                    <ul>
+                      <li>
+                        Express-session
+                      </li>
+                    </ul>
                   </ul>
-                  <li><span>для избежания определённых атак и немного защитить приложение (путём добавления заголовков)
-                      использовал:</span></li>
                   <ul>
-                    <li>Helmet</li>
+                    <li>для избежания определённых атак и немного защитить приложение (путём добавления заголовков)</li>
+                    <ul>
+                      <li>
+                        Helmet
+                      </li>
+                    </ul>
                   </ul>
-                  <li><span>для валидации полей авторизации и регистрации пользователя использова:</span>
-                  </li>
                   <ul>
-                    <li>Express-validator</li>
+                    <li>для валидации полей авторизации и регистрации пользователя</li>
+                    <ul>
+                      <li>
+                        Express-validator
+                      </li>
+                    </ul>
                   </ul>
-                  <li><span>для сжатия статических файлов использовал:</span></li>
                   <ul>
-                    <li>Сompression</li>
+                    <li>для сжатия статических файлов</li>
+                    <ul>
+                      <li>
+                        Сompression
+                      </li>
+                    </ul>
                   </ul>
-                  <li><span>для отправки email использова:</span></li>
                   <ul>
-                    <li>Nodemailer</li>
+                    <li>для отправки email</li>
+                    <ul>
+                      <li>
+                        Nodemailer
+                      </li>
+                    </ul>
                   </ul>
                 </ul>
-                <div>
-                  Вот ссылка на web приложени: &nbsp;&nbsp;<a
+                <br />
+                <div class="collapsible-body-link">
+                  Вот ссылка на web приложение: &nbsp;&nbsp;<a
                     href="https://quiet-gorge-08860.herokuapp.com">https://quiet-gorge-08860.herokuapp.com</a><br />
                   Вот ссылка на GitHub: &nbsp;&nbsp;<a
                     href="https://github.com/Victor-Irzunov/e-commerce-application.git">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
@@ -280,6 +332,7 @@
                       MySQL
                     </li>
                   </ul>
+                  <br />
                   <div>
                     Вот ссылка на web приложение: &nbsp;&nbsp;<a
                       href="https://mighty-falls-71399.herokuapp.com/">https://mighty-falls-71399.herokuapp.com/</a><br />
@@ -313,62 +366,15 @@
         </div>
       </div>
 
-      <!-- <div class="skills">
-        <div class="skill">
-          <div class="skill-info">
-            <span>HTML</span>
-            <span>90%</span>
-          </div>
-          <div class="skill-bar html"></div>
-        </div>
-
-        <div class="skill">
-          <div class="skill-info">
-            <span>CSS</span>
-            <span>80%</span>
-          </div>
-          <div class="skill-bar css"></div>
-        </div>
-
-        <div class="skill">
-          <div class="skill-info">
-            <span>Javascript</span>
-            <span>70%</span>
-          </div>
-          <div class="skill-bar js"></div>
-        </div>
-
+      <!--       
         <div class="skill">
           <div class="skill-info">
             <span>React</span>
             <span>70%</span>
           </div>
           <div class="skill-bar react"></div>
-        </div>
+        </div> -->
 
-        <div class="skill">
-          <div class="skill-info">
-            <span>Node.js</span>
-            <span>70%</span>
-          </div>
-          <div class="skill-bar node"></div>
-        </div>
-
-        <div class="skill">
-          <div class="skill-info">
-            <span>MySQL</span>
-            <span>80%</span>
-          </div>
-          <div class="skill-bar mysql"></div>
-        </div>
-        <div class="skill">
-          <div class="skill-info">
-            <span>NoSQL</span>
-            <span>75%</span>
-          </div>
-          <div class="skill-bar nosql"></div>
-        </div>
-      </div> -->
     </div>
   </section>
 
@@ -380,32 +386,26 @@
         <div class="service">
           <i class="icon fa fa-window-maximize" aria-hidden="true"></i>
           <h4>Build Websites</h4>
-          <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> -->
         </div>
         <div class="service">
           <i class="icon fas fa-pager"></i>
           <h4>Build Webapp</h4>
-          <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> -->
         </div>
         <div class="service">
           <i class="icon fas fa-database"></i>
           <h4>Manage Databases</h4>
-          <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> -->
         </div>
         <div class="service">
           <i class="icon fa fa-desktop"></i>
           <h4>Cross-browser compatibility</h4>
-          <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> -->
         </div>
         <div class="service">
           <i class="icon fas fa-credit-card"></i>
           <h4>Ui Design</h4>
-          <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> -->
         </div>
         <div class="service">
           <i class="icon fa fa-server" aria-hidden="true"></i>
-          <h4>запуск приложения на серверe</h4>
-          <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p> -->
+          <h4>Запуск приложения на серверe</h4>
         </div>
       </div>
     </div>
@@ -431,25 +431,25 @@
         <div class="block">
           <h4>2020 - 2021</h4>
           <h3>React</h3>
-          <p>самообучение</p>
+          <p>Самообучение</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
           <h3>Node.js</h3>
-          <p>обучение в ОДО «Центр Обучающих Технологий»</p>
+          <p>Обучение в ОДО «Центр Обучающих Технологий»</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
           <h3>NoSQL</h3>
-          <p>самообучение</p>
+          <p>Самообучение</p>
         </div>
 
         <div class="block">
           <h4>2021</h4>
           <h3>SQL</h3>
-          <p>самообучение</p>
+          <p>Самообучение</p>
         </div>
       </div>
     </div>
