--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                   Срок выполнения: 3 месяца
                 </div>
 
-                <span>Сделал адаптивное web приложение простую социальную сеть:</span>
+                <span>Сделал web приложение простую социальную сеть:</span>
                 <ul class="ul-li">
                   <li>
                     <span>для управления фронтенд-состоянием приложения использовал:</span>
