--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="buttons">
           <a href="#" class="button__contact" onclick="toglleBtn()">Contact me</a>
           <a href="tel:+375333511597" class="button__contact2">📞 +375 33 351-15-97</a>
-          <a href="CV.docx" class="button__contact3" onclick="load()" download>Download CV</a>
+          <a href="CV_Victor_Irzunov.docx" class="button__contact3" onclick="load()" download>Download CV</a>
         </div>
       </div>
     </div>
